--- a/index.html
+++ b/index.html
@@ -1,32 +1,305 @@
-<html>
-  <head>
-    <style>
-      #logo {
-        max-height: 90%;
-        max-width: 90%;
-        position: absolute;
-        top: 0;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        margin: auto;
-      }
-      #ct {
-        position: absolute;
-        bottom:40;
-        left:0;
-        right:0;
-        margin: auto;
+<!DOCTYPE html>
+<html lang="en">
 
-      }
-      body {
-        background-color: black;
-      }
-    </style>
-    <title>UPDOG TECHNOLOGIES</title>
-  </head>
-  <body>
-    <img id="logo" src = "updog.png">
-    <img id="ct" height="15" src = "ct.png">
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="description" content="">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Title -->
+    <title>UPDog Technologies</title>
+
+    <!-- Favicon -->
+    <link rel="icon" href="./img/core-img/favicon.png">
+
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="style.css">
+
+</head>
+
+<body>
+    <!-- Preloader -->
+    <div id="preloader">
+        <div class="loader"></div>
+    </div>
+    <!-- /Preloader -->
+
+    <!-- Header Area Start -->
+    <header class="header-area">
+        <!-- Top Header Area Start -->
+
+        <!-- Top Header Area End -->
+
+        <!-- Main Header Start -->
+        <div class="main-header-area">
+            <div class="classy-nav-container breakpoint-off">
+                <div class="container">
+                    <!-- Classy Menu -->
+                    <nav class="classy-navbar justify-content-between" id="hamiNav">
+
+                        <!-- Logo -->
+                        <a class="nav-brand" href="index.html"><img src="./img/logo.png" alt=""></a>
+
+                        <!-- Navbar Toggler -->
+                        <div class="classy-navbar-toggler">
+                            <span class="navbarToggler"><span></span><span></span><span></span></span>
+                        </div>
+
+                        <!-- Menu -->
+                        <div class="classy-menu">
+                            <!-- Menu Close Button -->
+                            <div class="classycloseIcon">
+                                <div class="cross-wrap"><span class="top"></span><span class="bottom"></span></div>
+                            </div>
+                            <!-- Nav Start -->
+                            <div class="classynav">
+                                <ul id="nav">
+                                </ul>
+                            </div>
+                            <!-- Nav End -->
+                        </div>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- Header Area End -->
+
+    <!-- Welcome Area Start -->
+    <section class="welcome-area">
+
+        <!-- Welcome Pattern -->
+        <div class="welcome-pattern">
+            <img src="img/core-img/welcome-pattern.png" alt="">
+        </div>
+
+        <!-- Welcome Slide -->
+        <div class="welcome-slides owl-carousel">
+
+            <!-- Single Welcome Slide -->
+            <div class="single-welcome-slide">
+                <!-- Welcome Content -->
+                <div class="welcome-content h-100">
+                    <div class="container h-100">
+                        <div class="row h-100 align-items-center">
+                            <!-- Welcome Text -->
+                            <div class="col-12 col-md-9 col-lg-7">
+                                <div class="welcome-text mb-50">
+                                    <h2 data-animation="fadeInLeftBig" data-delay="200ms" data-duration="1s">Modern <br> Technology Solutions</h2>
+                                    <h3 data-animation="fadeInLeftBig" data-delay="400ms" data-duration="1s">Taking you to the next level!</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Welcome Thumbnail -->
+                <div class="welcome-thumbnail">
+                    <img src="img/bg-img/1.png" alt="">
+                </div>
+            </div>
+
+            <!-- Single Welcome Slide -->
+            <div class="single-welcome-slide">
+                <!-- Welcome Content -->
+                <div class="welcome-content h-100">
+                    <div class="container h-100">
+                        <div class="row h-100 align-items-center">
+                            <!-- Welcome Text -->
+                            <div class="col-12 col-md-9 col-lg-7">
+                                <div class="welcome-text mb-50">
+                                    <h2 data-animation="fadeInUpBig" data-delay="200ms" data-duration="1s">Full Service <br>Consulting</h2>
+                                    <h3 data-animation="fadeInUpBig" data-delay="400ms" data-duration="1s">Technology and Infrastructure</h3>
+                                    <p data-animation="fadeInUpBig" data-delay="600ms" data-duration="1s">End to End Solutions</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Welcome Thumbnail -->
+                <div class="welcome-thumbnail">
+                    <img src="img/bg-img/2.png" alt="">
+                </div>
+            </div>
+
+        </div>
+
+        <!-- Clouds -->
+        <div class="clouds">
+            <img src="img/core-img/cloud-1.png" alt="" class="cloud-1">
+            <img src="img/core-img/cloud-2.png" alt="" class="cloud-2">
+            <img src="img/core-img/cloud-3.png" alt="" class="cloud-3">
+            <img src="img/core-img/cloud-4.png" alt="" class="cloud-4">
+            <img src="img/core-img/cloud-5.png" alt="" class="cloud-5">
+        </div>
+    </section>
+    <!-- Welcome Area End -->
+
+
+    <!-- Features Area Start -->
+    <section class="hami-features-area bg-gray section-padding-100">
+        <div class="container">
+            <div class="row">
+                <!-- Section Heading -->
+                <div class="col-12">
+                    <div class="section-heading text-center">
+                        <h2>Select Services</h2>
+                        <p>We offer a full range of services to bring your business to the next level</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+
+                <!-- Single Feature Area -->
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="single-feature-area d-flex mb-50">
+                        <div class="feature-icon">
+                            <i class="icon_cloud-upload_alt"></i>
+                        </div>
+                        <div class="feature-text">
+                            <h5>Backup and Maintinance</h5>
+                            <p>Reduce security concerns and minimize downtime by letting us keep your systems backed up and up to date</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Single Feature Area -->
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="single-feature-area d-flex mb-50">
+                        <div class="feature-icon">
+                            <i class="icon_adjust-vert"></i>
+                        </div>
+                        <div class="feature-text">
+                            <h5>Optimized Solutions</h5>
+                            <p>There is no need to use a hammer when a screwdriver will get the job done.  We offer solutions to fit you.</p>
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- Single Feature Area -->
+                <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="single-feature-area d-flex mb-50">
+                        <div class="feature-icon">
+                            <i class="icon_headphones"></i>
+                        </div>
+                        <div class="feature-text">
+                            <h5>Professional Support</h5>
+                            <p>Engineering level support for all of your needs.</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <!-- Feature Pattern -->
+        <div class="feature-pattern">
+            <img src="img/core-img/welcome-pattern.png" alt="">
+        </div>
+    </section>
+    <!-- Features Area End -->
+
+   
+    <!-- Call To Action Area Start -->
+    <section class="hami-call-to-action bg-gray section-padding-100-0">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12 col-md-6">
+                    <div class="cta-thumbnail mb-100">
+                        <img src="img/bg-img/2.png" alt="">
+                    </div>
+                </div>
+                <div class="col-12 col-md-6">
+                    <div class="cta--content mb-100">
+                        <h2>Expierience tomorrow today</h2>
+                        <!-- Description -->
+                        <div class="cta-desc mb-50">
+                            <h6><i class="icon_check"></i> VOIP/PBX</h6>
+                            <h6><i class="icon_check"></i> Cloud Based Solutions</h6>
+                            <h6><i class="icon_check"></i> Premise Based Solutions</h6>
+                            <h6><i class="icon_check"></i> Blockchain Management</h6>
+                            <h6><i class="icon_check"></i> End to End Infrastructure</h6>
+                            <h6><i class="icon_check"></i> Owl Extermination</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Call To Action Area End -->
+
+    <!-- Support Area Start -->
+    <section class="hami-support-area bg-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="support-text">
+                        <h2>Need help? Contact our award-winning support team 24/7: support@updog.tech</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Support Pattern -->
+        <div class="support-pattern" style="background-image: url(img/core-img/support-pattern.png);"></div>
+    </section>
+    <!-- Support Area End -->
+
+    <!-- Call To Action Area Start -->
+    <section class="hami-cta-area">
+
+    </section>
+    <!-- Call To Action Area End -->
+
+    <!-- Footer Area Start -->
+    <footer class="footer-area section-padding-80-0">
+
+
+        <!-- Bottom Footer Area -->
+        <div class="bottom-footer-area bg-gray">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-12 col-md-6">
+                        <!-- Copywrite Text -->
+                        <div class="copywrite-text">
+                            <p class='invisible'><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+</p>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <!-- Payment Methods -->
+                        <div class="payments-methods d-flex align-items-center">
+                            <p>Payments We Accept</p>
+                            <i class="fa fa-cc-visa" aria-hidden="true"></i>
+                            <i class="fa fa-cc-mastercard" aria-hidden="true"></i>
+                            <i class="fa fa-cc-discover" aria-hidden="true"></i>
+                            <i class="fa fa-cc-amex" aria-hidden="true"></i>
+                            <i class="fa fa-cc-paypal" aria-hidden="true"></i>
+                            <i class="fa fa-cc-stripe" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Footer Area End -->
+
+    <!-- **** All JS Files ***** -->
+    <!-- jQuery 2.2.4 -->
+    <script src="js/jquery.min.js"></script>
+    <!-- Popper -->
+    <script src="js/popper.min.js"></script>
+    <!-- Bootstrap -->
+    <script src="js/bootstrap.min.js"></script>
+    <!-- All Plugins -->
+    <script src="js/hami.bundle.js"></script>
+    <!-- Active -->
+    <script src="js/default-assets/active.js"></script>
+
+</body>
+
 </html>
